# chessbot

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
chessbot/: board.py  board_printer.py  constants.py  enums.py  exceptions.py  game.py
chessbot/players/: base.py  bot_material.py  bot_pawn_pusher.py  random.py
